syntax = "proto3";

package crossplane;

import "validate/validate.proto";

option go_package = "github.com/stroppy-io/hatchet-workflow/internal/proto/crossplane";

message OnlyNameRef {
    string name = 1 [(validate.rules).string.min_len = 1];
}

message Ref {
    string namespace = 1 [(validate.rules).string.min_len = 1];
    string name = 2 [(validate.rules).string.min_len = 1];
}

message ExtRef {
    Ref ref = 1 [(validate.rules).message.required = true];
    string api_version = 2 [(validate.rules).string.min_len = 1];
    string kind = 3 [(validate.rules).string.min_len = 1];
}

message Identifier {
    string id = 1 [(validate.rules).string.min_len = 1];
    string name = 2 [(validate.rules).string.min_len = 1];
    SupportedCloud supported_cloud = 3 [(validate.rules).enum.defined_only = true];
}

message Base64Value {
    string value = 1 [(validate.rules).string.min_len = 1];
}

message Metadata {
    string name = 1 [(validate.rules).string.min_len = 1];
    string namespace = 2 [(validate.rules).string.min_len = 1];
    map<string, string> annotations = 3;
}

enum SupportedCloud {
    SUPPORTED_CLOUD_UNSPECIFIED = 0;
    SUPPORTED_CLOUD_YANDEX = 1;
}

message Ip {
    string value = 1 [(validate.rules).string.min_len = 1];
}

message Cidr {
    string value = 1 [(validate.rules).string.min_len = 1];
}

message CidrWithIps {
    Cidr cidr = 1 [(validate.rules).message.required = true];
    repeated Ip ips = 2 [(validate.rules).repeated.min_items = 1];
}

enum CrossplaneDeletionPolicy {
    CROSSPLANE_DELETION_POLICY_UNSPECIFIED = 0;
    DELETE = 1;
    ORPHAN = 2;
}
